--- a/CSS/register.css
+++ b/CSS/register.css
@@ -9,7 +9,7 @@
 #register-screen{
     width: 100%;
     height: 149.92503748125938vh;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
 }
