--- a/CSS/home.css
+++ b/CSS/home.css
@@ -18,7 +18,7 @@
     background-color: white;
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 100;
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
     display: flex;
 }
@@ -214,6 +214,7 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .navSettings:hover{
